<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/poster"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_release_date"
        style="@style/LightText"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/release_date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/poster"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_date"
        style="@style/LightText"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/release_date"
        app:layout_constraintTop_toBottomOf="@id/tv_release_date"
        app:layout_constraintStart_toEndOf="@id/poster"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_genre"
        style="@style/LightText"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/genre"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toEndOf="@id/poster"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_genre_list"
        style="@style/LightText"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/genre"
        app:layout_constraintTop_toBottomOf="@id/tv_genre"
        app:layout_constraintStart_toEndOf="@id/poster"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_budget"
        style="@style/LightText"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/budget"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_genre_list"
        app:layout_constraintStart_toEndOf="@id/poster"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_budget_value"
        style="@style/LightText"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/budget"
        app:layout_constraintTop_toBottomOf="@id/tv_budget"
        app:layout_constraintStart_toEndOf="@id/poster"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_revenue"
        style="@style/LightText"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/revenue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_budget_value"
        app:layout_constraintStart_toEndOf="@id/poster"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_revenue_value"
        style="@style/LightText"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/revenue"
        app:layout_constraintTop_toBottomOf="@id/tv_revenue"
        app:layout_constraintStart_toEndOf="@id/poster"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:background="@drawable/content_view"
        app:layout_constraintTop_toBottomOf="@id/poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_title"
            style="@style/DarkBlueText"
            android:layout_width="match_parent"
            android:text="@string/title"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_overview"
            style="@style/DarkBlueText"
            android:layout_width="match_parent"
            android:text="@string/overview"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_overview_desc"
            style="@style/DarkText"
            android:layout_width="match_parent"
            android:text="@string/overview"
            app:layout_constraintTop_toBottomOf="@id/tv_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>