<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_movie"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/movies"/>

    <item
        android:id="@+id/nav_tv_show"
        android:icon="@drawable/ic_baseline_tv_24"
        android:title="@string/tv_shows"/>

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorites"/>
</menu>